First pass at Plugin Management design conversion

--- a/core/server/views/settings.hbs
+++ b/core/server/views/settings.hbs
@@ -217,4 +217,226 @@
             <p>Available plugins: {{json availablePlugins}}</p>
         </section>
     </section>
+    <section id="plugins" class="settings-content">
+        <header>
+            <h2 class="title">Plugins</h2>
+            <section class="page-actions">
+                <button class="button-add">Add Plugin</button>
+            </section>
+        </header>
+        <section class="content">
+            <section class="plugin-section">
+                <header class="plugin-section-header">
+                    <h3>Updates</h3>
+                </header>
+                <table class="plugin-section-table">
+                    <tbody>
+                        <tr class="plugin-section-item">
+                            <td>
+                                <figure class="plugin-icon">
+
+                                </figure>
+                                <section class="plugin-meta">
+                                    <span class="plugin-title plugin-info">Ghost SEO</span>
+                                    <span class="plugin-download-progress" data-complete="45">
+                                        <span style="width: 45%"></span>
+                                    </span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">Yoast</span>
+                                    <span class="plugin-sub-info">yoast.com</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">v 0.1.13</span>
+                                    <span class="plugin-sub-info">3 weeks ago</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info rating">
+                                        <span class="active"></span><span class="active"></span><span class="active"></span><span class="active"></span><span></span>
+                                    </span>
+                                    <span class="plugin-sub-info">48,200 users</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <button class="button-delete button-cancel">Cancel</button>
+                                </section>
+                            </td>
+                        </tr>
+                        <tr class="plugin-section-item">
+                            <td>
+                                <figure class="plugin-icon">
+
+                                </figure>
+                                <section class="plugin-meta">
+                                    <span class="plugin-title plugin-info">Ghost SEO</span>
+                                    <span class="plugin-sub-info">The #1 content marketing plugin for Ghost.</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">Yoast</span>
+                                    <span class="plugin-sub-info">yoast.com</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">v 0.1.13</span>
+                                    <span class="plugin-sub-info">3 weeks ago</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info rating">
+                                        <span class="active"></span><span class="active"></span><span class="active"></span><span class="active"></span><span></span>
+                                    </span>
+                                    <span class="plugin-sub-info">48,200 users</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <button class="button-save">Update</button>
+                                </section>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <footer class="plugin-section-footer">
+                    <button class="button-alt button-update-all">Update All</button>
+                </footer>
+            </section>
+            <section class="plugin-section">
+                <header class="plugin-section-header">
+                    <h3>Active Plugins</h3>
+                </header>
+                <table class="plugin-section-table">
+                    <tbody>
+                        <tr class="plugin-section-item">
+                            <td>
+                                <figure class="plugin-icon">
+
+                                </figure>
+                                <section class="plugin-meta">
+                                    <span class="plugin-title plugin-info">Ghost SEO</span>
+                                    <span class="plugin-sub-info">The #1 content marketing plugin for Ghost.</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">Yoast</span>
+                                    <span class="plugin-sub-info">yoast.com</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">v 0.1.13</span>
+                                    <span class="plugin-sub-info">3 weeks ago</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info rating">
+                                        <span class="active"></span><span class="active"></span><span class="active"></span><span class="active"></span><span></span>
+                                    </span>
+                                    <span class="plugin-sub-info">48,200 users</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <a href="#" class="plugin-settings-icon"></a>
+                                </section>
+                            </td>
+                        </tr>
+                        <tr class="plugin-section-item">
+                            <td>
+                                <figure class="plugin-icon">
+
+                                </figure>
+                                <section class="plugin-meta">
+                                    <span class="plugin-title plugin-info">Ghost SEO</span>
+                                    <span class="plugin-sub-info">The #1 content marketing plugin for Ghost.</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">Yoast</span>
+                                    <span class="plugin-sub-info">yoast.com</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">v 0.1.13</span>
+                                    <span class="plugin-sub-info">3 weeks ago</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info rating">
+                                        <span class="active"></span><span class="active"></span><span class="active"></span><span class="active"></span><span></span>
+                                    </span>
+                                    <span class="plugin-sub-info">48,200 users</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <a href="#" class="plugin-settings-icon"></a>
+                                </section>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section class="plugin-section">
+                <header class="plugin-section-header">
+                    <h3>Inactive Plugins</h3>
+                </header>
+                <table class="plugin-section-table">
+                    <tbody>
+                        <tr class="plugin-section-item inactive">
+                            <td>
+                                <figure class="plugin-icon">
+
+                                </figure>
+                                <section class="plugin-meta">
+                                    <span class="plugin-title plugin-info">Ghost SEO</span>
+                                    <span class="plugin-sub-info">The #1 content marketing plugin for Ghost.</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">Yoast</span>
+                                    <span class="plugin-sub-info">yoast.com</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info">v 0.1.13</span>
+                                    <span class="plugin-sub-info">3 weeks ago</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <span class="plugin-info rating">
+                                        <span class="active"></span><span class="active"></span><span class="active"></span><span class="active"></span><span></span>
+                                    </span>
+                                    <span class="plugin-sub-info">48,200 users</span>
+                                </section>
+                            </td>
+                            <td>
+                                <section class="plugin-meta">
+                                    <button class="button-add">Activate</button>
+                                </section>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </section>
+    </section>
 </div>
