Improve title casing

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -44,6 +44,7 @@
         <script src="/public/vendor/showdown/extensions/ghostdown.js"></script>
         <script src="/public/vendor/shortcuts.js"></script>
         <script src="/public/vendor/countable.js"></script>
+        <script src="/public/vendor/to-title-case.js"></script>
         <script src="/public/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="/public/vendor/packery.pkgd.min.js"></script>
 
