Move shared third-party libraries to /shared/vendor

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -34,11 +34,14 @@
             {{{body}}}
         </main>
 
-        <script src="/public/vendor/jquery/jquery.min.js"></script>
+        <script src="/shared/vendor/jquery/jquery.js"></script>
+        <script src="/shared/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
+        <script src="/shared/vendor/underscore.js"></script>
+        <script src="/shared/vendor/backbone/backbone.js"></script>
+        <script src="/shared/vendor/handlebars/handlebars-runtime.js"></script>
+        <script src="/shared/vendor/moment.js"></script>
+
         <script src="/public/vendor/icheck/jquery.icheck.min.js"></script>
-        <script src="/public/vendor/underscore.js"></script>
-        <script src="/public/vendor/backbone/backbone.js"></script>
-        <script src="/public/vendor/handlebars/handlebars-runtime.js"></script>
         <script src="/public/vendor/codemirror/codemirror.js"></script>
         <script src="/public/vendor/codemirror/mode/markdown/markdown.js"></script>
         <script src="/public/vendor/showdown/showdown.js"></script>
@@ -46,7 +49,6 @@
         <script src="/public/vendor/shortcuts.js"></script>
         <script src="/public/vendor/countable.js"></script>
         <script src="/public/vendor/to-title-case.js"></script>
-        <script src="/public/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="/public/vendor/packery.pkgd.min.js"></script>
 
         <script src="/public/init.js"></script>
@@ -55,7 +57,6 @@
         <script src="/public/admin-ui-temp.js"></script>
         <script src="/public/markdown-actions.js"></script>
         <script src="/public/tagui.js"></script>
-        <script src="/public/vendor/moment.js"></script>
         <script src="/public/helpers/index.js"></script>
 
         <!-- // require '/public/models/*' -->
