--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -46,9 +46,7 @@
 
     .entry-container {
         position: relative;
-        height: -webkit-calc(100% - 70px);
-        height: -moz-calc(100% - 70px);
-        height: calc(100% - 70px);
+        height: 100%;
     }
 
 	// The two content panel wrappers, positioned left/right
@@ -62,7 +60,7 @@
 		padding: 15px;
 		position: absolute;
 		bottom:40px; // height of the publish bar
-		top:0px; // height of the post title + margin
+        top:69px; // height of the post title + margin
 		background: #fff;
 		box-shadow: $shadow;
 
@@ -72,8 +70,8 @@
 
 		// Convert all content areas to small boxes
 		@include breakpoint($netbook) {
-			top:40px;
-			left:0;
+            top:109px;
+            left:0;
 			right:0;
 			width:100%;
 			border:none;
@@ -468,7 +466,7 @@ body.zen {
 	color: $lightgrey;
 	background: lighten($grey, 15%);
 	border-radius: $rounded;
-	box-shadow: 
+	box-shadow:
 		rgba(255,255,255,0.2) 0 1px 0 inset,
 		#000 0 1px 3px;
 
@@ -485,7 +483,7 @@ body.zen {
 
   li.selected{
     background: $blue;
-    box-shadow: 
+    box-shadow:
         rgba(255,255,255,0.2) 0 1px 0 inset,
         rgba(0,0,0,0.5) 0 1px 5px;
   }
