--- a/ghost/admin/assets/sass/layouts/settings.scss
+++ b/ghost/admin/assets/sass/layouts/settings.scss
@@ -18,11 +18,9 @@
     .wrapper {
         background: #fff;
         box-shadow: $shadow;
-        position:absolute;
-        top:0;
-        bottom:0;
-        left:0;
-        right:0;
+        position: relative;
+        width: 100%;
+        height: 100%;
         margin:0;
         padding:0;
     }
