Success notifications now fade out after 3 seconds

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -870,6 +870,11 @@ nav {
     @extend %notification;
     @include icon($i-success);
     background: $green;
+
+    @include animation(fade-out 1s linear);
+    @include animation-delay(3s);
+    @include animation-iteration-count(1);
+    @include animation-fill-mode(forwards);
 }
 
 .notification-error {
