--- a/core/client/assets/sass/modules/mixins.scss
+++ b/core/client/assets/sass/modules/mixins.scss
@@ -179,3 +179,16 @@ $green: #9FBB58;
     }
   }
 }
+
+/* =============================================================================
+   Animations
+   ============================================================================= */
+
+@include keyframes(fade-out) {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
