--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -34,6 +34,8 @@
             {{{body}}}
         </main>
 
+        <aside id="modal-container">
+        </aside>
         <script src="/public/vendor/jquery/jquery.min.js"></script>
         <script src="/public/vendor/icheck/jquery.icheck.min.js"></script>
         <script src="/public/vendor/underscore.js"></script>
