--- a/core/client/assets/sass/modules/animations.scss
+++ b/core/client/assets/sass/modules/animations.scss
@@ -27,3 +27,13 @@
   0%   { opacity: 0; }
   100% { opacity: 1; }
 }
+
+@include keyframes(fadeIn) {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
