Started a jQuery utilities file for Ghost jQuery plugins and helpers

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -51,6 +51,7 @@
         <script src="/public/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="/public/vendor/packery.pkgd.min.js"></script>
 
+        <script src="/public/lib/jquery-utils.js"></script>
         <script src="/public/init.js"></script>
         <script src="/public/tpl/hbs-tpl.js"></script>
         <script src="/public/toggle.js"></script>
