--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -527,6 +527,14 @@ body.zen {
 }
 
 /* =============================================================================
+   Markdown Help Modal
+   ============================================================================= */
+
+.modal-markdown-help-table {
+    margin-top: 0;
+}
+
+/* =============================================================================
    CodeMirror
    ============================================================================= */
 
