Improved modal creation, now includes info and action types.

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -109,8 +109,12 @@
 			}
 
 			.markdown-help {
+                position: relative;
+                top: -5px;
+                right: -5px;
 			    @include icon($i-question, '', lighten($brown, 15%));
 			    float:right;
+                padding: 5px;
 
 			    &:hover {
 			        @include icon($i-question, '', $brown)
