Rough implementation of Scrollspy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,7 @@
 
 <script src="{{ site.url }}/assets/js/jquery.js"></script>
 <script src="{{ site.url }}/assets/js/bootstrap.min.js"></script>
+<script src="{{ site.url }}/assets/js/main.js"></script>
 
 </body>
 </html>
