Replaced user menu label with current Ghost version no
closes #286
- added current version as an app.local variable available on both client and server
- swapped out the user menu label for the version no

--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
             <li id="usermenu" class="subnav">
                 <a href="#" data-toggle="ul" class="dropdown">
                     <img class="avatar" src="/public/img/user.jpg" alt="Avatar" />
-                    <span class="name">User Menu</span>
+                    <span class="name">Ghost v{{version}}</span>
                 </a>
                 <ul class="overlay">
                     <li class="usermenu-profile"><a href="#">Your Profile</a></li>
