--- a/ghost/admin/assets/sass/layouts/manage.scss
+++ b/ghost/admin/assets/sass/layouts/manage.scss
@@ -32,9 +32,6 @@
         background: #fff;
         box-shadow: $shadow;
 
-        @include breakpoint(900px) {
-            width:300px;
-        }
         @include breakpoint($tablet) {
             width:auto;
             right:0;
@@ -182,9 +179,11 @@
         border-left:$lightbrown 2px solid;
         background: #fff;
         box-shadow: $shadow;
-        @include breakpoint(900px) {
+        @include breakpoint($tablet) {
             width: auto;
-            left: 300px;
+            left: 100%;
+            right: -100%;
+            margin-left: 15px;
         }
 
         .unfeatured {
