Bug Fix: Dashboard now has correct bottom padding

--- a/core/client/assets/sass/layouts/dashboard.scss
+++ b/core/client/assets/sass/layouts/dashboard.scss
@@ -32,6 +32,10 @@
    Widget Base
    ========================================================================== */
 
+.js-widget-container {
+    padding-bottom: 15px;
+}
+
 %widget, .widget  {
   width: 340px;
   height: 300px;
