Revert "Merge pull request #318 from matthojo/mobile-interactions"
This reverts commit f18c7f22c33a4857945064d07bc138d886283499, reversing
changes made to 4ea9d77b11ee147ec2a8eba9938d9b3aeeeb295d.

--- a/core/client/assets/sass/layouts/settings.scss
+++ b/core/client/assets/sass/layouts/settings.scss
@@ -48,7 +48,6 @@
         left:0;
         bottom:0;
         z-index: 700;
-        background: #FFFFFF;
         box-shadow: $lightbrown 1px 0 0;
         @include breakpoint($tablet) {
             width:100%;
@@ -158,15 +157,7 @@
         right:0;
         left:20%;
         bottom:0;
-        background: #FFFFFF;
-
-        @include breakpoint($tablet) {
-            display: none;
-            width: 100%;
-            left: 100%;
-            right: -100%;
-            margin-left: 15px;
-        }
+        @include breakpoint($tablet) { display: none; }
 
         display: none;
         &.active {display:block;}
