--- a/ghost/admin/assets/sass/layouts/manage.scss
+++ b/ghost/admin/assets/sass/layouts/manage.scss
@@ -32,6 +32,9 @@
         background: #fff;
         box-shadow: $shadow;
 
+        @include breakpoint(900px) {
+            width:300px;
+        }
         @include breakpoint($tablet) {
             width:auto;
             right:0;
@@ -179,11 +182,9 @@
         border-left:$lightbrown 2px solid;
         background: #fff;
         box-shadow: $shadow;
-        @include breakpoint($tablet) {
+        @include breakpoint(900px) {
             width: auto;
-            left: 100%;
-            right: -100%;
-            margin-left: 15px;
+            left: 300px;
         }
 
         .unfeatured {
