--- a/ghost/admin/assets/sass/layouts/settings.scss
+++ b/ghost/admin/assets/sass/layouts/settings.scss
@@ -48,7 +48,6 @@
         left:0;
         bottom:0;
         z-index: 700;
-        background: #FFFFFF;
         box-shadow: $lightbrown 1px 0 0;
         @include breakpoint($tablet) {
             width:100%;
@@ -158,15 +157,7 @@
         right:0;
         left:20%;
         bottom:0;
-        background: #FFFFFF;
-
-        @include breakpoint($tablet) {
-            display: none;
-            width: 100%;
-            left: 100%;
-            right: -100%;
-            margin-left: 15px;
-        }
+        @include breakpoint($tablet) { display: none; }
 
         display: none;
         &.active {display:block;}
